<?xml version="1.0"?>
<package>
  <name>covreg</name>
  <version>0.1.0</version>
  <description>Package for adapting and learning covariance predictors.</description>

  <maintainer email="humhu@cmu.edu">Humphrey Hu</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>AFLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>argus_utils</build_depend>
  <build_depend>argus_msgs</build_depend>
  <build_depend>lookup</build_depend>
  <build_depend>broadcast</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>argus_utils</run_depend>
  <run_depend>argus_msgs</run_depend>
  <run_depend>lookup</run_depend>
  <run_depend>broadcast</run_depend>
  <run_depend>visualization_msgs</run_depend>
  
</package>
