<?xml version="1.0"?>
<package>
  <name>graphopt</name>
  <version>0.1.0</version>
  <description>Wrapper around the ISAM graph optimization library.</description>

  <maintainer email="humhu@cmu.edu">Humphrey Hu</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>AFL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>argus_utils</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>argus_utils</run_depend>
  
</package>
