<?xml version="1.0"?>
<package>
  <name>lookup</name>
  <version>0.1.0</version>
  <description>Software to provide a global parameter lookup service.</description>
  
  <maintainer email="humhu@cmu.edu">Humphrey Hu</maintainer>
  
  
  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>argus_utils</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>argus_utils</run_depend>
  
</package>
